Fix some spacing issues

--- a/services/oodikone2-frontend/src/components/FilterTray/filterTray.css
+++ b/services/oodikone2-frontend/src/components/FilterTray/filterTray.css
@@ -126,13 +126,13 @@
 
 #filter-tray.cards .description,
 #filter-tray.cards .extra {
-  padding: 0.8rem;
+  padding: 0 0.8rem 0.8rem 0.8rem;
   margin: 0;
 }
 
 #filter-tray .card .extra {
   margin: 0 0 0 auto;
-  padding-top: 0.2rem;
+  padding-top: 0.8rem;
 }
 
 #filter-tray .checkbox {
@@ -157,7 +157,11 @@
 #filter-tray .description-text {
   color: #9e9e9e;
   font-style: italic;
-  margin: 0 0.2rem 1.2rem 0.2rem;
+  margin: 1rem 0.2rem 0 0.2rem;
+}
+
+#filter-tray .card-content {
+  margin-top: 0.8rem;
 }
 
 #filter-tray .total-credits-filter .description {
